--- a/web/templates/layout/basic.html
+++ b/web/templates/layout/basic.html
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">SaaS</a>
+                <a class="navbar-brand" href="{% url 'index' %}">SaaS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -42,18 +42,22 @@
                     <li><a href="#">价格</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                           aria-expanded="false">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
-                    </li>
+                    {% if request.tracer %}
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                               aria-haspopup="true"
+                               aria-expanded="false">{{ request.tracer.username }}<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Something else here</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="{% url 'logout' %}">注 销</a></li>
+                            </ul>
+                        </li>
+                    {% else %}
+                        <li><a href="/login/" id="">登 录</a></li>
+                        <li><a href="/register/" class="regTag icon-add">注 册</a></li>
+                    {% endif %}
+
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
