--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -1,3 +1,4 @@
+{% extends 'layout/basic.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="zh-CN">
@@ -9,12 +10,14 @@
           content="Validate Login & Register Forms Responsive Widget,Login form widgets, Sign up Web forms , Login signup Responsive web form,Flat Pricing table,Flat Drop downs,Registration Forms,News letter Forms,Elements"/>
 
     <!-- CSS样式文件 -->
+    {% block CSS %}
     <link rel="stylesheet" href="{% static 'plugins/font-awesome-4.7.0/css/font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'plugins/bootstrap-3.4.1-dist/css/bootstrap.min.css' %}">
+{#    <link rel="stylesheet" href="{% static 'plugins/bootstrap-3.4.1-dist/css/bootstrap.min.css' %}">#}
     <link rel="stylesheet" href="{% static 'CSS/css/style.css' %}" type="text/css" media="all"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200..900&display=swap" rel="stylesheet">
+{#    <link rel="preconnect" href="https://fonts.googleapis.com">#}
+{#    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>#}
+{#    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200..900&display=swap" rel="stylesheet">#}
+    {% endblock %}
     <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
@@ -27,91 +30,14 @@
 </head>
 <body>
 <!-- 导航栏 -->
-<nav class="navbar navbar-default">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">SaaS</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li><a href="#">产品功能<span class="sr-only">(current)</span></a></li>
-                <li><a href="#">企业方案</a></li>
-                <li><a href="#">帮助文档</a></li>
-                <li><a href="#">价格</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" id="loginNavBtn">登录/注册</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">更多 <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
 
 <!-- 内容区域 -->
+{% block content %}
+
 <div class="container">
     <!-- 登录注册内容 -->
     <div class="container-agille">
         <div class="formBox level-login">
-            <div class="box boxShaddow"></div>
-            <div class="box loginBox">
-                <h3>登 录</h3>
-                <form class="form" action="#" method="post">
-                    <div class="f_row-2">
-                        <input type="text" class="input-field" placeholder="邮箱" name="email" required>
-                    </div>
-                    <div class="f_row-2 last">
-                        <input type="password" name="password" placeholder="密码" class="input-field" required>
-                    </div>
-                    <input class="submit-w3" type="submit" value="登 录">
-                    <div class="f_link">
-                        <a href="" class="resetTag">忘记密码？</a>
-                    </div>
-                </form>
-            </div>
-            <div class="box forgetbox agile">
-                <a href="#" class="back icon-back">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                         x="0px"
-                         y="0px"
-                         viewBox="0 0 199.404 199.404" style="enable-background:new 0 0 199.404 199.404;"
-                         xml:space="preserve">
-                            <polygon points="199.404,81.529 74.742,81.529 127.987,28.285 99.701,0 0,99.702 99.701,199.404 127.987,171.119 74.742,117.876
-                                199.404,117.876 "/>
-                        </svg>
-                </a>
-                <h3>重设密码</h3>
-                <form class="form" action="#" method="post">
-                    <p>请输入正确的注册邮箱号并输入您得到的验证码，并请勿试图将其泄露给他人</p>
-                    <div class="f_row last">
-                        <label>邮箱</label>
-                        <input type="email" name="email" placeholder="Email" class="input-field" required>
-                        <u></u>
-                    </div>
-                    <button class="btn button submit-w3">
-                        <span>发送</span>
-                    </button>
-                </form>
-            </div>
             <div class="box registerBox wthree">
                 <span class="reg_bg"></span>
                 <h3>注 册</h3>
@@ -143,16 +69,16 @@
                 </form>
             </div>
             <a href="#" class="regTag icon-add">
-                <i class="fa fa-clone" aria-hidden="true"></i>
+{#                <i class="fa fa-clone" aria-hidden="true"></i>#}
             </a>
         </div>
     </div>
 </div>
+{% endblock %}
 
+{% block JS %}
 <!-- JavaScript文件 -->
 <script src="{% static 'JS/jquery-3.7.1.min.js' %}"></script>
-<script src="{% static 'plugins/bootstrap-3.4.1-dist/js/bootstrap.min.js' %}"></script>
-
 <!-- input fields js -->
 <script src="{% static 'JS/input-field.js' %}"></script>
 <!-- //input fields js -->
@@ -249,5 +175,6 @@
 
     }
 </script>
+{% endblock %}
 </body>
 </html>
