--- a/web/templates/layout/basic.html
+++ b/web/templates/layout/basic.html
@@ -48,7 +48,7 @@
                                aria-haspopup="true"
                                aria-expanded="false">{{ request.tracer.username }}<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Something else here</a></li>
+                                <li><a href="#">管理中心</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="{% url 'logout' %}">注 销</a></li>
                             </ul>
