--- a/web/templates/project_list.html
+++ b/web/templates/project_list.html
@@ -1,20 +1,238 @@
 {% extends 'layout/manage.html' %}
-
+{% load static %}
 {% block CSS %}
     <style>
-
         .project {
             margin-top: 20px;
+        }
+
+        .panel-body {
+            padding: 0;
+            display: flex;
+            flex-direction: row;
+            justify-content: left;
+            align-items: flex-start;
+            flex-wrap: wrap;
+        }
+
+        .panel-body > .item {
+            border-radius: 6px;
+            width: 228px;
+            border: 1px solid #dddddd;
+            margin: 20px 10px;
+
+        }
+
+        .panel-body > .item:hover {
+            border: 1px solid #f0ad4e;
+        }
+
+        .panel-body > .item > .title {
+            height: 104px;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-top-left-radius: 6px;
+            border-top-right-radius: 6px;
+            font-size: 15px;
+            text-decoration: none;
+        }
+
+        .panel-body > .item > .info {
+            padding: 10px 10px;
+
+            display: flex;
+            justify-content: space-between;
+
+            border-bottom-left-radius: 6px;
+            border-bottom-right-radius: 6px;
+            color: #8c8c8c;
+
+        }
+
+        .panel-body > .item > .info a {
+            text-decoration: none;
+        }
+
+        .panel-body > .item > .info .fa-star {
+            font-size: 18px;
+        }
+
+        .color-radio label {
+            margin-left: 0;
+            padding-left: 0;
+        }
+
+        .color-radio input[type="radio"] {
+            display: none;
+        }
+
+        .color-radio input[type="radio"] + .cycle {
+            display: inline-block;
+            height: 25px;
+            width: 25px;
+            border-radius: 50%;
+            border: 2px solid #dddddd;
+        }
+
+        .color-radio input[type="radio"]:checked + .cycle {
+            border: 2px solid black;
         }
     </style>
 {% endblock %}
 
 {% block content %}
     <div class="container-fluid project">
-        <div>
-            <a href="#" class="btn  btn-default">
+        <div style="margin-bottom: 20px">
+            <a href="#" class="btn  btn-default" data-toggle="modal" data-target="#addModal">
                 <i class="fa fa-plus-circle" aria-hidden="true"></i>
                 新建项目</a>
         </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <i class="fa fa-star-o" aria-hidden="true"></i>
+                星标项目
+            </div>
+            <div class="panel-body">
+                {% for item in project_dict.star %}
+                    <div class="item">
+                        <a href="#" class="title"
+                           style="background-color: {{ item.value.get_color_display }}">{{ item.value.name }}</a>
+                        <div class="info">
+                            <div>
+                                <a href="{% url 'project_unstar' project_type=item.type project_id=item.value.id %}">
+                                    <i class="fa fa-star" aria-hidden="true" style="color: #FFF0F5"></i>
+                                </a>
+                                <span>{{ item.value.creator.username }}</span>
+                            </div>
+                            <div>
+                                <i class="fa fa-user-o" aria-hidden="true"></i>
+                                <span>{{ item.value.join_count }}</span>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <i class="fa fa-circle-o-notch" aria-hidden="true"></i>
+                我创建的
+            </div>
+            <div class="panel-body">
+                {% for item in project_dict.my %}
+                    <div class="item">
+                        <a href="#" class="title"
+                           style="background-color: {{ item.get_color_display }}">{{ item.name }}</a>
+                        <div class="info">
+                            <div>
+                                <a href="{% url 'project_star' project_type='my' project_id=item.id %}">
+                                    <i class="fa fa-star" aria-hidden="true" style="color:#B0C4DE"></i>
+                                </a>
+                                <span>{{ item.creator.username }}</span>
+                            </div>
+                            <div>
+                                <i class="fa fa-user-o" aria-hidden="true"></i>
+                                <span>{{ item.join_count }}</span>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+                我参与的
+            </div>
+            <div class="panel-body">
+                {% for item in project_dict.join %}
+                    <div class="item">
+                        <a href="#" class="title"
+                           style="background-color: {{ item.get_color_display }}">{{ item.name }}</a>
+                        <div class="info">
+                            <div>
+                                <a href="{% url 'project_star' project_type='join' project_id=item.id %}">
+                                    <i class="fa fa-star" aria-hidden="true" style="color: #FFF0F5"></i>
+                                </a>
+                                <span>{{ item.creator.username }}</span>
+                            </div>
+                            <div>
+                                <i class="fa fa-user-o" aria-hidden="true"></i>
+                                <span>{{ item.join_count }}</span>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
     </div>
+
+
+    {#    模态框#}
+    <!-- Modal -->
+    <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">新建项目</h4>
+                </div>
+                <div class="modal-body">
+
+                    <form id="addForm" method="POST">
+                        {% csrf_token %}
+                        {% for foo in form %}
+                            <div class="form-group">
+                                <label for={{ foo.id_for_label }}>{{ foo.label }}</label>
+                                {{ foo }}
+                                <span style="color:red;" class="error-msg"></span>
+                            </div>
+                        {% endfor %}
+                    </form>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取 消</button>
+                    <button id="btnSubmit" type="button" class="btn btn-primary">保 存</button>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block JS %}
+    <script src="{% static 'JS/jquery-3.7.1.min.js' %}"></script>
+    <script type="text/javascript">
+        $(function () {
+            bindSubmit()
+        });
+
+
+        function bindSubmit() {
+            $("#btnSubmit").click(function () {
+                $.ajax({
+                    url: '{% url "project_list" %}',
+                    type: "POST",
+                    data: $("#addForm").serialize(),
+                    dataType: "JSON",
+                    success: function (res) {
+                        console.log(res);
+                        if (res.status) {
+                            location.href = location.href //刷新界面
+                        } else {
+                            $.each(res.error, function (key, value) {
+                                $("#id_" + key).next().text(value[0])
+                            })  //循环的意思
+                        }
+                    }
+                })
+            })
+        }
+    </script>
 {% endblock %}
