--- a/web/templates/inclusion/all_project_list.html
+++ b/web/templates/inclusion/all_project_list.html
@@ -1,7 +1,9 @@
 {#    <li><a href="#">Link</a></li>#}
 <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-       aria-expanded="false">项 目<span class="caret"></span></a>
+       aria-expanded="false">项 目{% if request.tracer.project %}
+        ({{ request.tracer.project.name }})
+    {% endif %} <span class="caret"></span></a>
     <ul class="dropdown-menu">
         {% if my %}
             <li>
