腾讯云存储集成

--- a/web/templates/wiki.html
+++ b/web/templates/wiki.html
@@ -85,9 +85,7 @@
                     {% if wiki_object %}
 
                         <div id="previewMarkdown">
-                            <textarea>
-                            {{ wiki_object.content }}
-                            </textarea>
+                            <textarea>{{ wiki_object.content }}</textarea>
                         </div>
 
                     {% else %}
