--- a/web/templates/file.html
+++ b/web/templates/file.html
@@ -86,10 +86,10 @@
                                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                                 </a>
                             {% else %}
-{#                                <a class="btn btn-default btn-xs"#}
-{#                                   href="{% url 'file_download' project_id=request.tracer.project.id file_id=item.id %}">#}
-{#                                    <i class="fa fa-cloud-download" aria-hidden="true"></i>#}
-{#                                </a>#}
+                                <a class="btn btn-default btn-xs"
+                                   href="{% url 'file_download' project_id=request.tracer.project.id file_id=item.id %}">
+                                    <i class="fa fa-cloud-download" aria-hidden="true"></i>
+                                </a>
                             {% endif %}
 
                             <a class="btn btn-danger btn-xs"
@@ -376,6 +376,7 @@
                                 newTr.find('.username').text(res.data.username);
                                 newTr.find('.datetime').text(res.data.datetime);
                                 newTr.find('.delete').attr('data-fid', res.data.id);
+                                newTr.find('.download').attr('href',res.data.download_url);
 
                                 $("#rowList").append(newTr);
                             })
