--- a/web/templates/layout/manage.html
+++ b/web/templates/layout/manage.html
@@ -39,7 +39,7 @@
                         <li><a href="#">统计</a></li>
                         <li><a href="{% url 'wiki' project_id=request.tracer.project.id %}">wiki</a></li>
                         <li><a href="{% url 'file' project_id=request.tracer.project.id %}">文件</a></li>
-                        <li><a href="#">配置</a></li>
+                        <li><a href="{% url 'setting' project_id=request.tracer.project.id  %}">配置</a></li>
                     {% endif %}
                 </ul>
 
